ZGC: Fix fall through bug in ZBarrierSetC2::escape_add_final_edges()

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 13
    • Affects Version/s: 12, 13
    • Component/s: hotspot
    • gc
    • b05

      The switch statement in ZBarrierSetC2::escape_add_final_edges() has a fall through bug, letting the Op_LoadBarrierSlowReg/Op_LoadBarrierWeakSlowReg case fall through into the Op_Proj case.

      This was found during code inspection. We don't know of any real bugs caused by this.

            Assignee:
            Per Liden (Inactive)
            Reporter:
            Per Liden (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: