8217503: ZGC: Fix fall through bug in ZBarrierSetC2::escape_add_final_edges()

Reviewed-by: stefank